# Quant-Bot

./: .gitignore  Dockerfile  README.md  clean_pycache.py  debug_trendlines.py  docker-compose.yml  install_linux.sh  install_windows.bat  main.py  pyproject.toml  requirements.txt  run_api.bat  run_bot.bat  run_bot.sh  update.bat  update.sh
api/: README.md  crud.py  database.py  main.py  models.py  mt5_service.py  schemas.py
api/routers/: active_trades.py  dashboard.py  history.py  performance.py  signals.py  win_loss.py
config/: config.py
exports/: demo_results.json  demo_trade_log.json
src/: mt5_handler.py  risk_manager.py  trading_bot.py
src/backtest/: backtest_demo.py  backtest_risk_manager.py  backtester.py
src/config/: market_schedule.py
src/signal_generators/: signal_generator.py
src/strategy/: NWE.py  Supertrend.py  __init__.py  breakout_reversal_strategy.py  breakout_trading_strategy.py  confluence_price_action_strategy.py  luxalgo.py  luxalgo2.py  luxalgopremium.py  old_breakout_reversal_strategy.py  old_confluence_price_action_strategy.py  pinescript.py  price_action_sr_strategy.py  scalper.py  scalper2.py  scalper2v2.py  smc_strategy.py  strategy_template.py  supert2.py  trend_following_strategy.py
src/telegram/: telegram_bot.py  telegram_command_handler.py
src/utils/: __init__.py  backtest_demo.py  backtester.py  candlestick_patterns.py  data_manager.py  indicators.py  logging_setup.py  market_hours.py  market_utils.py  patterns_luxalgo.py  performance_tracker.py  position_manager.py  signal_processor.py  smc_utils.py
(+43 files in other folders)
